--- a/index.html
+++ b/index.html
@@ -5,54 +5,69 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Atmos - Weather & Time</title>
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
   body, html {
     height: 100%;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     color: #fff;
     transition: background 1s ease;
     text-align: center;
     user-select: none;
+    background: linear-gradient(to top, #56ccf2, #2f80ed);
   }
-  h1 {
-    font-weight: 100; /* really thin */
-    font-stretch: ultra-condensed; /* very narrow */
-    font-size: 3em;
-    margin: 0.5em 0 0.2em 0;
-    text-shadow: 0 0 12px rgba(0,0,0,0.4);
+  #topText {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 5px 15px;
+    font-weight: 100;
+    font-stretch: ultra-condensed;
+    font-size: 2em;
+    text-shadow: 0 0 8px rgba(0,0,0,0.4);
+    background: transparent;
+    text-align: center;
+    z-index: 1000;
+    user-select: none;
   }
-  .container {
+  #ipAddress {
+    position: fixed;
+    top: 2.5em;
+    width: 100%;
+    font-weight: 100;
+    font-stretch: ultra-condensed;
+    color: rgba(255,255,255,0.5);
+    font-size: 1em;
+    text-align: center;
+    user-select: none;
+  }
+  .mainContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    padding-top: 70px; /* to avoid overlapping with fixed texts */
+  }
+  #time {
     font-weight: 200;
     font-size: 4em;
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
-    margin-bottom: 0.3em;
   }
-  .temp {
-    font-size: 2.5em;
-    margin-top: 0.2em;
-  }
-  .emoji {
+  #weatherEmoji {
     font-size: 3em;
     margin: 0.3em 0;
   }
-  .subtitle {
+  #temp {
+    font-size: 2.5em;
+    margin-top: 0.2em;
+  }
+  #greeting {
     font-size: 1.2em;
     margin-top: 0.1em;
     color: rgba(255,255,255,0.7);
   }
-  #ipAddress {
-    font-size: 1em;
-    color: rgba(255,255,255,0.5);
-    margin-top: 1em;
-    font-weight: 100;
-    font-stretch: ultra-condensed;
-  }
-  /* Backgrounds based on time */
+  /* Backgrounds by time */
   .morning {
     background: linear-gradient(to top, #ffe259, #ffa751);
   }
@@ -68,19 +83,21 @@
 </style>
 </head>
 <body class="day">
-  <h1>Atmos</h1>
-  <div id="time" class="container">--:--:--</div>
-  <div id="weatherEmoji" class="emoji">☀️</div>
-  <div id="temp" class="temp">--°C</div>
-  <div id="greeting" class="subtitle">Loading...</div>
+  <div id="topText">Atmos</div>
   <div id="ipAddress">Detecting IP...</div>
+  <div class="mainContainer">
+    <div id="time">--:--:--</div>
+    <div id="weatherEmoji">☀️</div>
+    <div id="temp">--°C</div>
+    <div id="greeting">Loading...</div>
+  </div>
 
 <script>
   const apiKey = 'YOUR_API_KEY'; // Replace with your OpenWeatherMap API key
-  const city = 'New York'; // Change city or make dynamic
+  const city = 'New York'; // Replace as preferred
 
   function getEmoji(icon) {
-    const code = icon.slice(0,2);
+    const code = icon.slice(0, 2);
     if (code === '01') return icon.endsWith('d') ? '☀️' : '🌕';
     if (['02','03','04'].includes(code)) return '☁️';
     if (['09','10'].includes(code)) return '🌧️';
@@ -89,7 +106,7 @@
     return '🌡️';
   }
 
-  function updateBackgroundClassByTime() {
+  function updateBackgroundByTime() {
     const h = new Date().getHours();
     let cls = 'day';
     if (h >= 5 && h < 8) cls = 'morning';
@@ -125,10 +142,10 @@
 
   async function fetchIP() {
     try {
-      const res = await fetch('https://api.ipify.org?format/json');
+      const res = await fetch('https://ident.me/.json');
       if (!res.ok) throw new Error('IP fetch failed');
       const data = await res.json();
-      document.getElementById('ipAddress').textContent = `Your IP: ${data.ip}`;
+      document.getElementById('ipAddress').textContent = `Your IP: ${data.address}`;
     } catch (e) {
       document.getElementById('ipAddress').textContent = 'Unable to detect IP';
       console.error(e);
@@ -136,13 +153,13 @@
   }
 
   function init() {
-    updateBackgroundClassByTime();
+    updateBackgroundByTime();
     updateTime();
     fetchWeather();
     fetchIP();
     setInterval(updateTime, 1000);
     setInterval(fetchWeather, 10 * 60 * 1000);
-    setInterval(updateBackgroundClassByTime, 60 * 1000);
+    setInterval(updateBackgroundByTime, 60 * 1000);
     setInterval(fetchIP, 10 * 60 * 1000);
   }
 
