--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
   </div>
 
 <script>
-  const apiKey = 'YOUR_API_KEY'; // Replace with your OpenWeatherMap API key
-  const city = 'New York'; // Replace as needed
+  const apiKey = 'https://api.open-meteo.com/v1/forecast?latitude=12.9719&longitude=77.5937&hourly=temperature_2m,relative_humidity_2m&timezone=auto&forecast_days=1'; // Replace with your OpenWeatherMap API key
+  const city = 'Bengaluru'; // Replace as needed
 
   function getEmoji(icon) {
     const code = icon.slice(0, 2);
