--- a/index.html
+++ b/index.html
@@ -36,141 +36,4 @@
     width: 100%;
     font-weight: 100;
     font-stretch: ultra-condensed;
-    color: rgba(255,255,255,0.5);
-    font-size: 1em;
-    text-align: center;
-    user-select: none;
-    z-index: 1001;
-  }
-  .mainContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    padding-top: 70px;
-  }
-  #time {
-    font-weight: 200;
-    font-size: 4em;
-    text-shadow: 0 0 10px rgba(0,0,0,0.5);
-  }
-  #weatherEmoji {
-    font-size: 3em;
-    margin: 0.3em 0;
-  }
-  #temp {
-    font-size: 2.5em;
-    margin-top: 0.2em;
-  }
-  #greeting {
-    font-size: 1.2em;
-    margin-top: 0.1em;
-    color: rgba(255,255,255,0.7);
-  }
-  /* Backgrounds by time */
-  .morning {
-    background: linear-gradient(to top, #ffe259, #ffa751);
-  }
-  .day {
-    background: linear-gradient(to top, #56ccf2, #2f80ed);
-  }
-  .evening {
-    background: linear-gradient(to top, #614385, #516395);
-  }
-  .night {
-    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-  }
-</style>
-</head>
-<body class="day">
-  <div id="topText">Atmos</div>
-  <div id="ipAddress">Detecting IP and location...</div>
-  <div class="mainContainer">
-    <div id="time">--:--:--</div>
-    <div id="weatherEmoji">☀️</div>
-    <div id="temp">--°C</div>
-    <div id="greeting">Loading weather...</div>
-  </div>
-
-<script>
-  const apiNinjasKey = 'YOUR_API_NINJAS_API_KEY'; // Get free key from https://api-ninjas.com/api/weather
-
-  function getEmoji(weather) {
-    weather = weather.toLowerCase();
-    if (weather.includes('clear')) return '☀️';
-    if (weather.includes('cloud')) return '☁️';
-    if (weather.includes('rain')) return '🌧️';
-    if (weather.includes('thunderstorm')) return '⛈️';
-    if (weather.includes('snow')) return '❄️';
-    if (weather.includes('fog') || weather.includes('mist')) return '🌫️';
-    return '🌡️';
-  }
-
-  function updateBackgroundByTime() {
-    const h = new Date().getHours();
-    let cls = 'day';
-    if (h >= 5 && h < 8) cls = 'morning';
-    else if (h >= 8 && h < 17) cls = 'day';
-    else if (h >= 17 && h < 20) cls = 'evening';
-    else cls = 'night';
-    document.body.className = cls;
-  }
-
-  function updateTime() {
-    const now = new Date();
-    const timeStr = now.toLocaleTimeString([], {hour12: false});
-    document.getElementById('time').textContent = timeStr;
-  }
-
-  async function fetchWeather(lat, lon) {
-    try {
-      const res = await fetch(`https://api.api-ninjas.com/v1/weather?lat=${lat}&lon=${lon}`, {
-        headers: { 'X-Api-Key': apiNinjasKey }
-      });
-      if (!res.ok) throw new Error('Weather fetch failed');
-      const data = await res.json();
-      document.getElementById('temp').textContent = `${data.temp}°C`;
-      document.getElementById('weatherEmoji').textContent = getEmoji(data.weather);
-      document.getElementById('greeting').textContent = data.weather;
-    } catch (e) {
-      document.getElementById('greeting').textContent = 'Unable to fetch weather';
-      console.error(e);
-    }
-  }
-
-  async function fetchIPAndLocationWeather() {
-    try {
-      // Get IP first
-      const ipRes = await fetch('https://api.ipify.org');
-      if (!ipRes.ok) throw new Error('IP fetch failed');
-      const ip = await ipRes.text();
-      document.getElementById('ipAddress').textContent = `Your IP: ${ip}`;
-
-      // Get geo location from IP
-      const geoRes = await fetch(`http://ip-api.com/json/${ip}`);
-      if (!geoRes.ok) throw new Error('Geo fetch failed');
-      const geoData = await geoRes.json();
-      if (geoData.status !== 'success') throw new Error('Geo lookup failed');
-      
-      updateBackgroundByTime();
-      await fetchWeather(geoData.lat, geoData.lon);
-
-    } catch (e) {
-      document.getElementById('ipAddress').textContent = 'Unable to detect IP/location';
-      document.getElementById('greeting').textContent = 'Unable to fetch weather';
-      console.error(e);
-    }
-  }
-
-  function init() {
-    fetchIPAndLocationWeather();
-    updateTime();
-    setInterval(updateTime, 1000);
-    setInterval(fetchIPAndLocationWeather, 10 * 60 * 1000);
-  }
-
-  init();
-</script>
-</body>
-</html>
+    color: rgba
