--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Atmos - Weather & Time by IP</title>
+<title>Atmos - Weather & Time</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
   body, html {
@@ -36,4 +36,134 @@
     width: 100%;
     font-weight: 100;
     font-stretch: ultra-condensed;
-    color: rgba
+    color: rgba(255,255,255,0.5);
+    font-size: 1em;
+    text-align: center;
+    user-select: none;
+  }
+  .mainContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    padding-top: 70px; /* to avoid overlapping with fixed texts */
+  }
+  #time {
+    font-weight: 200;
+    font-size: 4em;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
+  }
+  #weatherEmoji {
+    font-size: 3em;
+    margin: 0.3em 0;
+  }
+  #temp {
+    font-size: 2.5em;
+    margin-top: 0.2em;
+  }
+  #greeting {
+    font-size: 1.2em;
+    margin-top: 0.1em;
+    color: rgba(255,255,255,0.7);
+  }
+  /* Backgrounds by time */
+  .morning {
+    background: linear-gradient(to top, #ffe259, #ffa751);
+  }
+  .day {
+    background: linear-gradient(to top, #56ccf2, #2f80ed);
+  }
+  .evening {
+    background: linear-gradient(to top, #614385, #516395);
+  }
+  .night {
+    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+  }
+</style>
+</head>
+<body class="day">
+  <div id="topText">Atmos</div>
+  <div id="ipAddress">Detecting IP...</div>
+  <div class="mainContainer">
+    <div id="time">--:--:--</div>
+    <div id="weatherEmoji">☀️</div>
+    <div id="temp">--°C</div>
+    <div id="greeting">Loading...</div>
+  </div>
+
+<script>
+  const apiKey = 'YOUR_API_KEY'; // Replace with your OpenWeatherMap API key
+  const city = 'New York'; // Replace as preferred
+
+  function getEmoji(icon) {
+    const code = icon.slice(0, 2);
+    if (code === '01') return icon.endsWith('d') ? '☀️' : '🌕';
+    if (['02','03','04'].includes(code)) return '☁️';
+    if (['09','10'].includes(code)) return '🌧️';
+    if (code === '11') return '⛈️';
+    if (code === '13') return '❄️';
+    return '🌡️';
+  }
+
+  function updateBackgroundByTime() {
+    const h = new Date().getHours();
+    let cls = 'day';
+    if (h >= 5 && h < 8) cls = 'morning';
+    else if (h >= 8 && h < 17) cls = 'day';
+    else if (h >= 17 && h < 20) cls = 'evening';
+    else cls = 'night';
+    document.body.className = cls;
+  }
+
+  function updateTime() {
+    const now = new Date();
+    const timeStr = now.toLocaleTimeString([], {hour12: false});
+    document.getElementById('time').textContent = timeStr;
+  }
+
+  async function fetchWeather() {
+    try {
+      const res = await fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`);
+      if (!res.ok) throw new Error('Weather fetch failed');
+      const data = await res.json();
+      const temp = Math.round(data.main.temp);
+      const icon = data.weather[0].icon;
+      const description = data.weather[0].description;
+
+      document.getElementById('temp').textContent = `${temp}°C`;
+      document.getElementById('weatherEmoji').textContent = getEmoji(icon);
+      document.getElementById('greeting').textContent = description.charAt(0).toUpperCase() + description.slice(1);
+    } catch (e) {
+      document.getElementById('greeting').textContent = 'Unable to fetch weather';
+      console.error(e);
+    }
+  }
+
+  async function fetchIP() {
+    try {
+      const res = await fetch('https://ident.me/.json');
+      if (!res.ok) throw new Error('IP fetch failed');
+      const data = await res.json();
+      document.getElementById('ipAddress').textContent = `Your IP: ${data.address}`;
+    } catch (e) {
+      document.getElementById('ipAddress').textContent = 'Unable to detect IP';
+      console.error(e);
+    }
+  }
+
+  function init() {
+    updateBackgroundByTime();
+    updateTime();
+    fetchWeather();
+    fetchIP();
+    setInterval(updateTime, 1000);
+    setInterval(fetchWeather, 10 * 60 * 1000);
+    setInterval(updateBackgroundByTime, 60 * 1000);
+    setInterval(fetchIP, 10 * 60 * 1000);
+  }
+
+  init();
+</script>
+</body>
+</html>
