--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
   </div>
 
 <script>
-  const apiKey = 'YOUR_API_KEY'; // Replace with your OpenWeatherMap API key
-  const city = 'New York'; // Replace as preferred
+  const apiKey = 'YiffA/55GTcQVZ0QzhYJow==rJfIBRK8Mw8DSi35'; // Replace with your OpenWeatherMap API key
+  const city = 'Bengaluru'; // Replace as preferred
 
   function getEmoji(icon) {
     const code = icon.slice(0, 2);
