--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     font-size: 1em;
     text-align: center;
     user-select: none;
+    z-index: 1001;
   }
   .mainContainer {
     display: flex;
@@ -47,7 +48,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    padding-top: 70px; /* to avoid overlapping with fixed texts */
+    padding-top: 70px;
   }
   #time {
     font-weight: 200;
@@ -84,27 +85,46 @@
 </head>
 <body class="day">
   <div id="topText">Atmos</div>
-  <div id="ipAddress">Detecting IP...</div>
+  <div id="ipAddress">Detecting IP and location...</div>
   <div class="mainContainer">
     <div id="time">--:--:--</div>
     <div id="weatherEmoji">☀️</div>
     <div id="temp">--°C</div>
-    <div id="greeting">Loading...</div>
+    <div id="greeting">Loading weather...</div>
   </div>
 
 <script>
-  const apiKey = 'YOUR_API_KEY'; // Replace with your OpenWeatherMap API key
-  const city = 'New York'; // Replace as preferred
-
-  function getEmoji(icon) {
-    const code = icon.slice(0, 2);
-    if (code === '01') return icon.endsWith('d') ? '☀️' : '🌕';
-    if (['02','03','04'].includes(code)) return '☁️';
-    if (['09','10'].includes(code)) return '🌧️';
-    if (code === '11') return '⛈️';
-    if (code === '13') return '❄️';
-    return '🌡️';
-  }
+  // Map Open-Meteo weather codes to emojis and descriptions
+  const weatherMap = {
+    0: { desc: 'Clear sky', emoji: '☀️' },
+    1: { desc: 'Mainly clear', emoji: '🌤️' },
+    2: { desc: 'Partly cloudy', emoji: '⛅' },
+    3: { desc: 'Overcast', emoji: '☁️' },
+    45: { desc: 'Fog', emoji: '🌫️' },
+    48: { desc: 'Depositing rime fog', emoji: '🌫️' },
+    51: { desc: 'Light drizzle', emoji: '🌧️' },
+    53: { desc: 'Moderate drizzle', emoji: '🌧️' },
+    55: { desc: 'Dense drizzle', emoji: '🌧️' },
+    56: { desc: 'Light freezing drizzle', emoji: '🌧️' },
+    57: { desc: 'Dense freezing drizzle', emoji: '🌧️' },
+    61: { desc: 'Slight rain', emoji: '🌦️' },
+    63: { desc: 'Moderate rain', emoji: '🌧️' },
+    65: { desc: 'Heavy rain', emoji: '🌧️' },
+    66: { desc: 'Light freezing rain', emoji: '🌧️' },
+    67: { desc: 'Heavy freezing rain', emoji: '🌧️' },
+    71: { desc: 'Slight snow fall', emoji: '❄️' },
+    73: { desc: 'Moderate snow fall', emoji: '❄️' },
+    75: { desc: 'Heavy snow fall', emoji: '❄️' },
+    77: { desc: 'Snow grains', emoji: '❄️' },
+    80: { desc: 'Slight rain showers', emoji: '🌦️' },
+    81: { desc: 'Moderate rain showers', emoji: '🌧️' },
+    82: { desc: 'Violent rain showers', emoji: '🌧️' },
+    85: { desc: 'Slight snow showers', emoji: '❄️' },
+    86: { desc: 'Heavy snow showers', emoji: '❄️' },
+    95: { desc: 'Thunderstorm', emoji: '⛈️' },
+    96: { desc: 'Thunderstorm with slight hail', emoji: '⛈️' },
+    99: { desc: 'Thunderstorm with heavy hail', emoji: '⛈️' }
+  };
 
   function updateBackgroundByTime() {
     const h = new Date().getHours();
@@ -122,45 +142,48 @@
     document.getElementById('time').textContent = timeStr;
   }
 
-  async function fetchWeather() {
+  async function fetchWeather(lat, lon) {
     try {
-      const res = await fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`);
-      if (!res.ok) throw new Error('Weather fetch failed');
-      const data = await res.json();
-      const temp = Math.round(data.main.temp);
-      const icon = data.weather[0].icon;
-      const description = data.weather[0].description;
+      const response = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current_weather=true`);
+      if (!response.ok) throw new Error('Weather API error');
+      const data = await response.json();
+      const cw = data.current_weather;
 
-      document.getElementById('temp').textContent = `${temp}°C`;
-      document.getElementById('weatherEmoji').textContent = getEmoji(icon);
-      document.getElementById('greeting').textContent = description.charAt(0).toUpperCase() + description.slice(1);
-    } catch (e) {
+      const w = weatherMap[cw.weathercode] || { desc: 'Unknown', emoji: '🌡️' };
+      document.getElementById('temp').textContent = `${cw.temperature}°C`;
+      document.getElementById('weatherEmoji').textContent = w.emoji;
+      document.getElementById('greeting').textContent = w.desc;
+
+    } catch (err) {
       document.getElementById('greeting').textContent = 'Unable to fetch weather';
-      console.error(e);
+      console.error(err);
     }
   }
 
-  async function fetchIP() {
-    try {
-      const res = await fetch('https://ident.me/.json');
-      if (!res.ok) throw new Error('IP fetch failed');
-      const data = await res.json();
-      document.getElementById('ipAddress').textContent = `Your IP: ${data.address}`;
-    } catch (e) {
-      document.getElementById('ipAddress').textContent = 'Unable to detect IP';
-      console.error(e);
+  function jsonpCallback(data) {
+    if (!data || !data.loc) {
+      document.getElementById('ipAddress').textContent = 'Unable to detect IP/location';
+      document.getElementById('greeting').textContent = 'Unable to fetch weather';
+      return;
     }
+    const [lat, lon] = data.loc.split(',');
+    document.getElementById('ipAddress').textContent = `IP: ${data.ip} | ${data.city}, ${data.region}, ${data.country}`;
+    updateBackgroundByTime();
+    fetchWeather(lat, lon);
+  }
+
+  function loadIpInfo() {
+    const script = document.createElement('script');
+    // Replace YOUR_TOKEN with your own from https://ipinfo.io/
+    script.src = 'https://ipinfo.io/json?token=55a4312cf9f21e&callback=jsonpCallback';
+    document.body.appendChild(script);
   }
 
   function init() {
-    updateBackgroundByTime();
     updateTime();
-    fetchWeather();
-    fetchIP();
+    loadIpInfo();
     setInterval(updateTime, 1000);
-    setInterval(fetchWeather, 10 * 60 * 1000);
-    setInterval(updateBackgroundByTime, 60 * 1000);
-    setInterval(fetchIP, 10 * 60 * 1000);
+    setInterval(loadIpInfo, 10 * 60 * 1000);
   }
 
   init();
