--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
     font-size: 1em;
     text-align: center;
     user-select: none;
-    z-index: 1001;
   }
   .mainContainer {
     display: flex;
@@ -68,7 +67,7 @@
     margin-top: 0.1em;
     color: rgba(255,255,255,0.7);
   }
-  /* Backgrounds by time */
+  /* backgrounds by time */
   .morning {
     background: linear-gradient(to top, #ffe259, #ffa751);
   }
@@ -94,7 +93,6 @@
   </div>
 
 <script>
-  // Map Open-Meteo weather codes to emojis and descriptions
   const weatherMap = {
     0: { desc: 'Clear sky', emoji: '☀️' },
     1: { desc: 'Mainly clear', emoji: '🌤️' },
@@ -108,85 +106,4 @@
     56: { desc: 'Light freezing drizzle', emoji: '🌧️' },
     57: { desc: 'Dense freezing drizzle', emoji: '🌧️' },
     61: { desc: 'Slight rain', emoji: '🌦️' },
-    63: { desc: 'Moderate rain', emoji: '🌧️' },
-    65: { desc: 'Heavy rain', emoji: '🌧️' },
-    66: { desc: 'Light freezing rain', emoji: '🌧️' },
-    67: { desc: 'Heavy freezing rain', emoji: '🌧️' },
-    71: { desc: 'Slight snow fall', emoji: '❄️' },
-    73: { desc: 'Moderate snow fall', emoji: '❄️' },
-    75: { desc: 'Heavy snow fall', emoji: '❄️' },
-    77: { desc: 'Snow grains', emoji: '❄️' },
-    80: { desc: 'Slight rain showers', emoji: '🌦️' },
-    81: { desc: 'Moderate rain showers', emoji: '🌧️' },
-    82: { desc: 'Violent rain showers', emoji: '🌧️' },
-    85: { desc: 'Slight snow showers', emoji: '❄️' },
-    86: { desc: 'Heavy snow showers', emoji: '❄️' },
-    95: { desc: 'Thunderstorm', emoji: '⛈️' },
-    96: { desc: 'Thunderstorm with slight hail', emoji: '⛈️' },
-    99: { desc: 'Thunderstorm with heavy hail', emoji: '⛈️' }
-  };
-
-  function updateBackgroundByTime() {
-    const h = new Date().getHours();
-    let cls = 'day';
-    if (h >= 5 && h < 8) cls = 'morning';
-    else if (h >= 8 && h < 17) cls = 'day';
-    else if (h >= 17 && h < 20) cls = 'evening';
-    else cls = 'night';
-    document.body.className = cls;
-  }
-
-  function updateTime() {
-    const now = new Date();
-    const timeStr = now.toLocaleTimeString([], {hour12: false});
-    document.getElementById('time').textContent = timeStr;
-  }
-
-  async function fetchWeather(lat, lon) {
-    try {
-      const response = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current_weather=true`);
-      if (!response.ok) throw new Error('Weather API error');
-      const data = await response.json();
-      const cw = data.current_weather;
-
-      const w = weatherMap[cw.weathercode] || { desc: 'Unknown', emoji: '🌡️' };
-      document.getElementById('temp').textContent = `${cw.temperature}°C`;
-      document.getElementById('weatherEmoji').textContent = w.emoji;
-      document.getElementById('greeting').textContent = w.desc;
-
-    } catch (err) {
-      document.getElementById('greeting').textContent = 'Unable to fetch weather';
-      console.error(err);
-    }
-  }
-
-  function jsonpCallback(data) {
-    if (!data || !data.loc) {
-      document.getElementById('ipAddress').textContent = 'Unable to detect IP/location';
-      document.getElementById('greeting').textContent = 'Unable to fetch weather';
-      return;
-    }
-    const [lat, lon] = data.loc.split(',');
-    document.getElementById('ipAddress').textContent = `IP: ${data.ip} | ${data.city}, ${data.region}, ${data.country}`;
-    updateBackgroundByTime();
-    fetchWeather(lat, lon);
-  }
-
-  function loadIpInfo() {
-    const script = document.createElement('script');
-    // Replace YOUR_TOKEN with your own from https://ipinfo.io/
-    script.src = 'https://ipinfo.io/json?token=55a4312cf9f21e&callback=jsonpCallback';
-    document.body.appendChild(script);
-  }
-
-  function init() {
-    updateTime();
-    loadIpInfo();
-    setInterval(updateTime, 1000);
-    setInterval(loadIpInfo, 10 * 60 * 1000);
-  }
-
-  init();
-</script>
-</body>
-</html>
+    63: { desc: '
