--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     font-family: 'Montserrat', sans-serif;
     color: #fff;
     transition: background 1s ease;
-    text-align: center;
-    user-select: none;
     background: linear-gradient(to top, #56ccf2, #2f80ed);
+    text-align: center;
   }
   #topText {
     position: fixed;
@@ -26,9 +25,7 @@
     font-size: 2em;
     text-shadow: 0 0 8px rgba(0,0,0,0.4);
     background: transparent;
-    text-align: center;
     z-index: 1000;
-    user-select: none;
   }
   #ipAddress {
     position: fixed;
@@ -39,7 +36,6 @@
     color: rgba(255,255,255,0.5);
     font-size: 1em;
     text-align: center;
-    user-select: none;
   }
   .mainContainer {
     display: flex;
@@ -67,43 +63,89 @@
     margin-top: 0.1em;
     color: rgba(255,255,255,0.7);
   }
-  /* backgrounds by time */
-  .morning {
-    background: linear-gradient(to top, #ffe259, #ffa751);
-  }
-  .day {
-    background: linear-gradient(to top, #56ccf2, #2f80ed);
-  }
-  .evening {
-    background: linear-gradient(to top, #614385, #516395);
-  }
-  .night {
-    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-  }
+  /* Backgrounds by time of day */
+  .morning { background: linear-gradient(to top, #ffe259, #ffa751); }
+  .day { background: linear-gradient(to top, #56ccf2, #2f80ed); }
+  .evening { background: linear-gradient(to top, #614385, #516395); }
+  .night { background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%); }
 </style>
 </head>
-<body class="day">
-  <div id="topText">Atmos</div>
-  <div id="ipAddress">Detecting IP and location...</div>
-  <div class="mainContainer">
-    <div id="time">--:--:--</div>
-    <div id="weatherEmoji">☀️</div>
-    <div id="temp">--°C</div>
-    <div id="greeting">Loading weather...</div>
-  </div>
+<body>
+<div id="topText">Atmos</div>
+<div id="ipAddress">Detecting your location...</div>
+<div class="mainContainer">
+  <div id="time">--:--:--</div>
+  <div id="weatherEmoji">☀️</div>
+  <div id="temp">--°C</div>
+  <div id="greeting">Loading...</div>
+</div>
 
 <script>
-  const weatherMap = {
-    0: { desc: 'Clear sky', emoji: '☀️' },
-    1: { desc: 'Mainly clear', emoji: '🌤️' },
-    2: { desc: 'Partly cloudy', emoji: '⛅' },
-    3: { desc: 'Overcast', emoji: '☁️' },
-    45: { desc: 'Fog', emoji: '🌫️' },
-    48: { desc: 'Depositing rime fog', emoji: '🌫️' },
-    51: { desc: 'Light drizzle', emoji: '🌧️' },
-    53: { desc: 'Moderate drizzle', emoji: '🌧️' },
-    55: { desc: 'Dense drizzle', emoji: '🌧️' },
-    56: { desc: 'Light freezing drizzle', emoji: '🌧️' },
-    57: { desc: 'Dense freezing drizzle', emoji: '🌧️' },
-    61: { desc: 'Slight rain', emoji: '🌦️' },
-    63: { desc: '
+const weatherMap = {
+  0: { desc: 'Clear sky', emoji: '☀️' },
+  1: { desc: 'Mainly clear', emoji: '🌤️' },
+  2: { desc: 'Partly cloudy', emoji: '⛅' },
+  3: { desc: 'Overcast', emoji: '☁️' },
+  45: { desc: 'Fog', emoji: '🌫️' },
+  48: { desc: 'Depositing rime fog', emoji: '🌫️' },
+  51: { desc: 'Light drizzle', emoji: '🌧️' },
+  53: { desc: 'Moderate drizzle', emoji: '🌧️' },
+  55: { desc: 'Dense drizzle', emoji: '🌧️' },
+  61: { desc: 'Slight rain', emoji: '🌦️' },
+  63: { desc: 'Moderate rain', emoji: '🌧️' },
+  65: { desc: 'Heavy rain', emoji: '🌧️' },
+  71: { desc: 'Slight snow', emoji: '❄️' },
+  73: { desc: 'Moderate snow', emoji: '❄️' },
+  75: { desc: 'Heavy snow', emoji: '❄️' },
+  95: { desc: 'Thunderstorm', emoji: '⛈️' }
+};
+
+function updateBackgroundByTime() {
+  const h = new Date().getHours();
+  let cls = 'day';
+  if (h >= 5 && h < 8) cls = 'morning';
+  else if (h >= 8 && h < 17) cls = 'day';
+  else if (h >= 17 && h < 20) cls = 'evening';
+  else cls = 'night';
+  document.body.className = cls;
+}
+
+function updateTime() {
+  const now = new Date();
+  document.getElementById('time').textContent = now.toLocaleTimeString('en-GB', { hour12: false });
+}
+
+async function fetchWeather(lat, lon) {
+  try {
+    const response = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current_weather=true`);
+    if (!response.ok) throw new Error('Weather fetch error');
+    const data = await response.json();
+    const cw = data.current_weather;
+    const code = cw.weathercode;
+    const weatherInfo = weatherMap[code] || { desc: 'Unknown', emoji: '🌡️' };
+    document.getElementById('temp').textContent = `${cw.temperature}°C`;
+    document.getElementById('weatherEmoji').textContent = weatherInfo.emoji;
+    document.getElementById('greeting').textContent = weatherInfo.desc;
+  } catch (err) {
+    document.getElementById('greeting').textContent = 'Unable to fetch weather';
+  }
+}
+
+navigator.geolocation.getCurrentPosition(
+  position => {
+    const lat = position.coords.latitude;
+    const lon = position.coords.longitude;
+    document.getElementById('ipAddress').textContent = `Location detected`;
+    updateBackgroundByTime();
+    fetchWeather(lat, lon);
+  },
+  error => {
+    document.getElementById('ipAddress').textContent = 'Location access denied.';
+    document.getElementById('greeting').textContent = 'Unable to fetch weather';
+  }
+);
+
+setInterval(updateTime, 1000);
+</script>
+</body>
+</html>
